kubernetes/configs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: all-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: test.local
    http:
      paths:
      - path: /useragent
        backend:
          serviceName: useragent-service
          servicePort: 80
      - path: /myip
        backend:
          serviceName: myip-service
          servicePort: 80
      - path: /http-status-code
        backend:
          serviceName: http-status-code-service
          servicePort: 80
status:
  loadBalancer:
    ingress:
    - ip: 192.168.99.100
